# android-program-template

./: README.md
MyApplication6/app/src/androidTest/java/com/example/alex/myapplication/: ExampleInstrumentedTest.java
MyApplication6/app/src/main/cpp/: native-lib.cpp
MyApplication6/app/src/main/java/com/example/alex/myapplication/: MainActivity.java
MyApplication6/gradle/wrapper/: gradle-wrapper.properties
bluetooth_recv_state_broadcast/bluetoothjavaexample/app/: build.gradle
bluetooth_recv_state_broadcast/bluetoothjavaexample/app/src/main/: AndroidManifest.xml
bluetooth_recv_state_broadcast/bluetoothjavaexample/app/src/main/res/values/: strings.xml
bluetooth_recv_state_broadcast/bluetoothjavaexample/gradle/wrapper/: gradle-wrapper.properties
creat_tmp_file_and_get_broadcast_can_be_send_to_bluetooth/Broadcastexamplejava/app/: build.gradle
creat_tmp_file_and_get_broadcast_can_be_send_to_bluetooth/Broadcastexamplejava/app/src/main/: AndroidManifest.xml
creat_tmp_file_and_get_broadcast_can_be_send_to_bluetooth/Broadcastexamplejava/app/src/main/res/values/: string-array.xml  strings.xml
creat_tmp_file_and_get_broadcast_can_be_send_to_bluetooth/Broadcastexamplejava/gradle/wrapper/: gradle-wrapper.properties
use-third-party-library-like-google-example/MyApplication6/: local.properties
use-third-party-library-like-google-example/MyApplication6/app/: build.gradle
use-third-party-library-like-google-example/MyApplication6/app/src/main/: AndroidManifest.xml
use-third-party-library-like-google-example/MyApplication6/app/src/main/cpp/: CMakeLists.txt
(+7 files in other folders)
